--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "daisyui": "^4.4.19",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "scrollreveal": "^4.0.9",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
